--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,14 @@
         "php": ">=5.3.0",
         "sifnt/sifnt-util": "dev-master",
         "thesoftwarefanatics/php-html-parser": "^1.8.0",
-        "cosenary/simple-php-cache": "dev-master"
+        "cosenary/simple-php-cache": "dev-master",
+        "illuminate/database": "5.6.*",
+        "illuminate/events": "5.6.*"
+    },
+    "autoload": {
+        "classmap": [
+            "model/"
+        ]
     },
     "minimum-stability": "dev"
 }
